# mathematics-for-industries

./: .gitignore  CHANGELOG.md  README.md  mathematics-for-industries.cabal
src/: Common.hs  DP.hs  Lib.hs  Types.hs
